--- a/config.yml
+++ b/config.yml
@@ -32,9 +32,20 @@ drink_categories:
       - name: twelve_pack
         volume_ml: 4260  # 12 * 355ml
         servings: 12
-      # - name: case
-      #   volume_ml: 8520  # 24 * 355ml
-      #   servings: 24
+      - name: case
+        volume_ml: 8520  # 24 * 355ml
+        servings: 24
+
+  - name: Soju
+    serving_unit: bottle
+    container_options:
+      - name: eight_pack
+        volume_ml: 3000  # 8 * 375ml
+        servings: 8
+      - name: twelve_pack
+        volume_ml: 4250  # 12 * 355ml
+        servings: 12
+
 
 # Party settings now specify servings per person per category
 party_settings:
@@ -42,14 +53,15 @@ party_settings:
   num_nights: 3
   buffer_percentage: 0.05
   servings_per_person_per_night:
-    Spirits: 4.5    # 4 shots per person per night
-    Beer: 1.3     # beers per person per night
+    Spirits: 5.5    # 4 shots per person per night
+    Beer: 0     # beers per person per night
+    Soju: 0     # soju's per person per night
 
 # Drink preferences with categories
 drink_preferences:
   - name: Vodka
     category: Spirits
-    votes: 8
+    votes: 4
     prices:
       375_ml: 12.49
       fifth: 22.99
@@ -58,11 +70,10 @@ drink_preferences:
   
   - name: Tequila
     category: Spirits
-    votes: 3
+    votes: 2
     prices:
       375_ml: 17.99
       fifth: 34.99
-      liter: 100.99 # not sold we we go higher to avoid buying
       handle: 59.99
 
   - name: Gin
@@ -76,25 +87,24 @@ drink_preferences:
 
   - name: Whiskey
     category: Spirits
-    votes: 3
+    votes: 4
     prices:
       375_ml: 17.59
       fifth: 25.99
       liter: 36.99
-      handle: 100.00 # not sold so we go ridiculously high
     
   - name: Fireball
     category: Spirits
-    votes: 2
+    votes: 4
     prices:
       375_ml: 8.99
-      fifth: 13.99
-      liter: 19.99
-      handle: 24.99
+      fifth: 16.99
+      liter: 24.00 # not sold so we go ridiculously high
+      handle: 32.99
   
   - name: Jagermeister
     category: Spirits
-    votes: 3
+    votes: 0
     prices:
       375_ml: 14.89
       fifth: 29.99
@@ -103,14 +113,22 @@ drink_preferences:
   
   - name: Blue Moons
     category: Beer
-    votes: 3
-    prices:
-      six_pack: 10.99
-      twelve_pack: 20.99
-  
-  - name: Stella
-    category: Beer
     votes: 0
     prices:
       six_pack: 10.99
       twelve_pack: 20.99
+  
+  - name: Modelo
+    category: Beer
+    votes: 0
+    prices:
+      six_pack: 10.99
+      twelve_pack: 14.99
+      case: 30.59
+
+  - name: Soju
+    category: Soju
+    votes: 0
+    prices:
+      eight_pack: 27.79
+      twelve_pack: 35.69
